fix(logo): is not visible

--- a/app/javascript/styles/mastodon/containers.scss
+++ b/app/javascript/styles/mastodon/containers.scss
@@ -9,7 +9,7 @@
 }
 
 .logo-container {
-  margin: 50px auto;
+  margin: 30px auto;
 
   h1 {
     display: flex;
@@ -17,7 +17,7 @@
     align-items: center;
 
     .logo {
-      height: 42px;
+      height: 80px;
       margin-inline-end: 10px;
     }
 
